@@ -536,6 +536,8 @@ A finite field is encoded by any element (\typ{FFELT}).\hfil\break
 \li{absolute value, argument of $x$}{abs$(x)$, arg$(x)$}
 \li{square/nth root of $x$}{sqrt$(x)$, sqrtn$(x,n,\{$\&$z\})$}
 \li{all $n$-th roots of $1$}{rootsof1$(n)$}
+\li{FFT of $[f_0,\dots,f_{n-1}]$}
+   {$w$ = fftinit$(n)$, fft/fftinv$(w,f)$}
 \li{trig functions}{sin, cos, tan, cotan, sinc}
 \li{inverse trig functions}{asin, acos, atan}
 \li{hyperbolic functions}{sinh, cosh, tanh, cotanh}
