@@ -1,0 +1,20 @@
+Function: fft
+Section: polynomials
+C-Name: FFT
+Prototype: GG
+Help: fft(w,P): given w from fftinit, return the discrete Fourier transform
+ of P.
+Doc: given $w$ from \teb{fftinit}$(N)$ and a polynomial $P$ of degree $< N$,
+ return the unnormalized discrete Fourier transform of $P$,
+ $\{ P(w[i]), 1 \leq i \leq N\}$. Also allow $P$ to be a vector
+ $[p_0,\dots,p_n]$ representing the polynomial $\sum p_i X^i$.
+ Composing \kbd{fft} and \kbd{fftinv} returns $N$ times the original input
+ coefficients.
+ \bprog
+ ? w = fftinit(4); fft(w, x^3+x+1)
+ %1 = [3, 1, -1, 1]
+ ? fftinv(w, %)
+ %2 = [4, 4, 0, 4]
+ ? Polrev(%) / 4
+ %3 = x^3 + x + 1
+ @eprog
