@@ -1,0 +1,19 @@
+Function: fftinit
+Section: polynomials
+C-Name: FFTinit
+Prototype: Lp
+Help: fftinit(N): compute complex roots of unity of order N, a power of 2,
+ to be used by fft and fftinv.
+Doc: compute complex roots of unity of order $N$, a power of $2$, to be
+ used by \tet{fft} and \tet{fftinv}. Return a vector $w =
+ \{\exp(-2in\pi/N\}$, $n = 0,\dots,N-1$.
+ \bprog
+ ? w = fftinit(4)
+ %1 = [1, -I, -1, I]~
+ ? fft(w, x^3 + 2*x+3)
+ %2 = [6, 3 - I, 0, 3 + I]
+ ? fftinv(w, %)
+ %3 = [12, 8, 0, 4]
+ ? Polrev(%) / #%
+ %4 = x^3 + 2*x + 3
+ @eprog
