@@ -1,0 +1,29 @@
+Function: fftinv
+Section: polynomials
+C-Name: FFTinv
+Prototype: GG
+Help: fftinv(w,P): given w from fftinit, return the inverse Fourier transform
+ of P.
+Doc: given $w$ from \teb{fftinit}$(N)$ and a polynomial $P$ of degree $< N$,
+ return the inverse discrete Fourier transform of $P$,
+ $\{ P(1 / w[i]), 1 \leq i \leq N\}$. Also allow $P$ to be a vector
+ $[p_0,\dots,p_n]$ representing the polynomial $\sum p_i X^i$. Composing
+ \kbd{fft} and \kbd{fftinv} returns $N$ times the original input coefficients.
+ \bprog
+ ? w = fftinit(4); fft(w, x^3+x+1)
+ %1 = [3, 1, -1, 1]
+ ? fftinv(w, %)
+ %2 = [4, 4, 0, 4]
+ ? Polrev(%) / 4
+ %3 = x^3 + x + 1
+
+ ? N = 512; w = fftinit(N); T = random(1000 * x^(N-1));
+ ? U = fft(w, T);
+ time = 3 ms.
+ ? V = vector(N, i, subst(T, 'x, w[i]));
+ time = 65 ms.
+ ? exponent(V - U)
+ %7 = -97
+ ? round(Polrev(fftinv(w,U) / N)) == T
+ %8 = 1
+ @eprog
