@@ -1,0 +1,16 @@
+w = fftinit(2)
+g = fft(w, x+1)
+fftinv(w, g)
+
+w = fftinit(4)
+g = fft(w, x^3+x+1)
+fftinv(w, g)
+
+N = 512; w = fftinit(N); T = random(1000 * x^(N-1));
+U = fft(w, T);
+V = vector(N, i, subst(T, 'x, w[i]));
+exponent(V - U)
+round(Polrev(fftinv(w,U) / N)) == T
+
+\\ Errors
+fftinit(3);
